Changes on Dashboard(DashboardBody, Sidebar, Tabs, Tab), Logout)

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=Coda+Caption&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700;800&family=Coda+Caption&display=swap');
+
+html {
+  --header-font: 'Cinzel', cursive;
+}
+
 body {
   background-color: rgb(55, 55, 55);
   margin: 0;
