--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -11,7 +11,7 @@
   background-color: inherit;
   font-family: var(--header-font);
   margin: auto;
-  color: lightgray;
+  color: var(--black);
 
   display: flex;
   flex-direction: column;
