--- a/src/parts/Hero.css
+++ b/src/parts/Hero.css
@@ -5,14 +5,14 @@
   display: grid;
   grid-template-columns: 65% 35%;
   grid-template-rows: repeat(4, 25%);
-  border: 1px solid white;
+  border: 1px solid var(--white);
 }
 
 .title {
   grid-row: 2 / 3;
   font-size: 60px;
   font-weight: 700;
-  color: white;
+  color: var(--white);
 }
 
 .subtitle {
