--- a/src/parts/LoginForm.css
+++ b/src/parts/LoginForm.css
@@ -1,11 +1,15 @@
 * {
   box-sizing: border-box;
 }
+label {
+  color: var(--white);
+}
+
 .login-form-container {
   height: 100%;
   width: max-content;
   padding: 30px 15px;
-  border: 1px solid white;
+  border: 1px solid var(--white);
   border-radius: 10px;
   display: grid;
   place-items: center;
