--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700;800&family=Coda+Caption&display=swap');
 :root {
   --black: rgb(55, 55, 55);
-  --yellow: rgb(154, 151, 96);
+  --yellow-backup: rgb(154, 151, 96);
+  --yellow: rgb(174, 171, 96);
   --white: rgb(249, 246, 238);
 }
 
@@ -23,4 +24,12 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.glass {
+  background: rgba(255, 255, 255, 0.15);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
 }
