--- a/src/parts/Sidebar.css
+++ b/src/parts/Sidebar.css
@@ -1,11 +1,9 @@
 .sidebar-container {
   height: 100%;
   width: 100%;
-  padding: 10px;
+  padding: 15px 10px;
 
   display: grid;
   grid-template-rows: 20% 70% 10%;
   grid-gap: 5px;
-
-  border-right: 1px solid var(--white);
 }
