--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,15 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+button {
+  cursor: pointer;
+}
+
+*:disabled {
+  cursor: not-allowed !important;
+  border-color: gray !important;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
@@ -32,4 +41,21 @@ code {
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(5px);
   border: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.notif {
+  background-color: var(--white);
+  padding: 10px;
+  border-radius: 15px;
+}
+.error {
+  color: red;
+}
+
+.success {
+  color: green;
+}
+
+.hidden {
+  visibility: hidden;
 }
