--- a/src/parts/Workspace.css
+++ b/src/parts/Workspace.css
@@ -2,20 +2,27 @@
   height: 95%;
   width: 95%;
   margin: auto;
-  padding: 20px;
+  padding: 25px;
 
   display: grid;
+  grid-template-rows: 10% 1fr;
   grid-template-columns: 1fr 1fr;
-  grid-gap: 50px;
+  grid-gap: 25px;
+}
+.workspace-title {
+  grid-column: span 2;
+  font-size: 60px;
+  font-weight: 700;
+  background-color: var(--yellow);
+  color: var(--white);
+  text-align: start;
+  border-radius: 5px;
 }
 
-.space {
+.panel {
   height: 100%;
   width: 100%;
   padding: 20px 50px;
-}
-
-.customer-info, .transact-space {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 20% 1fr 10% 10%;
@@ -29,7 +36,7 @@
   place-items: center;
 }
 
-.account-number, .balance-value, .deposit-amount{
+.account-number, .balance-value, .amount{
   width: 100%;
   height: 100%;
   font-size: 40px;
@@ -44,14 +51,15 @@
   border-radius: 15px;
 }
 
-.deposit-amount-container {
+.amount-container, .withdraw-amount-container {
   padding: 20px 0;
   display: flex;
   flex-direction: column;
   text-align: center;
   gap: 20px;
 }
-.deposit-amount {
+
+.amount {
   height: max-content;
 }
 
