--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=Coda+Caption&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700;800&family=Coda+Caption&display=swap');
 :root {
-  --black: rgb(55, 55, 55);
-  --yellow-backup: rgb(154, 151, 96);
-  --yellow: rgb(174, 171, 96);
+  --primary: rgb(14, 17, 23);
+  --secondary: rgb(31, 35, 44);
+  --third: rgb(45, 51, 66);
+  --highlight-backup: rgb(154, 151, 96);
+  --highlight: rgb(174, 171, 96);
   --white: rgb(249, 246, 238);
 }
 
@@ -12,7 +14,7 @@ html {
 }
 
 body {
-  background-color: var(--black);
+  background-color: var(--primary);
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -36,17 +38,17 @@ code {
 }
 
 .glass {
-  background: rgba(255, 255, 255, 0.15);
+  background: var(--third);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(5px);
-  border: 1px solid rgba(255, 255, 255, 0.3);
+  /*border: 1px solid var(--highlight-backup);*/
 }
 
 .notif {
-  font-size: 12px;
+  font-size: 14px;
   background-color: var(--white);
-  padding: 10px;
+  padding: 18px;
   border-radius: 15px;
 }
 .error {
@@ -59,4 +61,10 @@ code {
 
 .hidden {
   visibility: hidden;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
