--- a/src/parts/Tab.css
+++ b/src/parts/Tab.css
@@ -1,4 +1,5 @@
 .tab {
+  color: var(--white);
   height: 100%;
   width: 100%;
   border-radius: 10px;
@@ -10,12 +11,11 @@
   justify-content: center;
   align-items: center;
 
-  border: 1px solid var(--white);
 }
 
 .tab:hover {
-  color: var(--yellow);
-  border: 1px solid var(--yellow);
+  color: var(--highlight);
+  border: 1px solid var(--highlight);
 }
 
 i {
@@ -26,4 +26,10 @@ i {
 .logout-btn {
   height: 85%;
   width: 100%;
+}
+
+.active {
+  background-color: var(--third);
+  color: var(--highlight);
+  border: 1px solid var(--highlight);
 }
