Initial changes for Transfer function

--- a/src/parts/Tab.css
+++ b/src/parts/Tab.css
@@ -3,6 +3,8 @@
   width: 100%;
   border-radius: 10px;
   cursor: pointer;
+  text-decoration: none;
+  color: var(--white);
 
   display: grid;
   grid-template-columns: 20% 80%;
