--- a/src/routes/UserManagement.css
+++ b/src/routes/UserManagement.css
@@ -1,9 +1,27 @@
+.workspace.container.user-management {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 10% 5% 82%;
+  grid-gap: 1%;
+}
+
+.user-management > .workspace-title {
+  width: 100%;
+  grid-row: span 1;
+}
+.user-management > .notif {
+  grid-column: 1 / 3;
+  grid-row: span 1;
+  padding: 5px 10px;
+}
+
 .workspace.user-management {
   grid-template-columns: 100%;
   grid-gap: 3% 0;
 }
 
 .users-table {
+  grid-column: span 2;
   width: 100%;
   max-height: 100%;
   border-radius: 15px;
