--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=Coda+Caption&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700;800&family=Coda+Caption&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300&display=swap');
+
 :root {
   --primary: rgb(14, 17, 23);
   --secondary: rgb(31, 35, 44);
@@ -7,6 +9,7 @@
   --highlight-backup: rgb(154, 151, 96);
   --highlight: rgb(174, 171, 96);
   --white: rgb(249, 246, 238);
+  --font-secondary: 'Montserrat', sans-serif;
 }
 
 * {
