--- a/src/parts/Hero.css
+++ b/src/parts/Hero.css
@@ -4,22 +4,35 @@
 
   display: grid;
   grid-template-columns: 65% 35%;
-  grid-template-rows: repeat(4, 25%);
+  grid-template-rows: repeat(5, 20%);
   border: 1px solid var(--white);
 }
 
-.title {
+.hero .title, .hero .subtitle, .hero-text-block {
+  padding-left: 20px;
+}
+
+.hero .title {
   grid-row: 2 / 3;
-  font-size: 60px;
+  font-size: 55px;
   font-weight: 700;
   color: var(--white);
 }
 
-.subtitle {
+.hero .subtitle {
   grid-row: 3 / 4;
+  color: var(--white);
+}
+
+.hero-text-block {
+  width: 70%;
+  grid-row: 4 / 5;
+  font-family: var(--font-secondary);
+  font-size: 14px;
+  color: var(--white);
 }
 
 .login-form-container {
   grid-column: 2 / 3;
-  grid-row: 2 / 4;
+  grid-row: 2 / 5;
 }
