[ErrorPage] setup error page

--- a/src/parts/LoginForm.css
+++ b/src/parts/LoginForm.css
@@ -25,6 +25,7 @@ label {
 }
 
 .login-form-container input {
+  font-family: var(--font-secondary);
   color: var(--secondary);
   padding-left: 5%;
 }
