--- a/src/parts/Hero.css
+++ b/src/parts/Hero.css
@@ -13,10 +13,13 @@
   font-size: 60px;
   font-weight: 700;
   color: var(--white);
+  margin: 0 0 0 4%;
 }
 
 .subtitle {
+  color: var(--white);
   grid-row: 3 / 4;
+  margin: 0 0 0 4%;
 }
 
 .login-form-container {
