fixed responsiveness; added edit on budget

--- a/src/parts/Workspace.css
+++ b/src/parts/Workspace.css
@@ -25,6 +25,11 @@
   text-transform: uppercase;
 }
 
+.customer-info {
+  display: grid;
+  grid-template-rows: 30% 70%;
+}
+
 .panel {
   height: 100%;
   width: 100%;
@@ -40,10 +45,6 @@
   grid-template-columns: 1fr;
   grid-template-rows: 1fr 1fr;
   place-items: center;
-}
-
-.search-input {
-  height: 30%;
 }
 
 .search-label {
@@ -65,14 +66,22 @@
   border-radius: 15px;
 }
 
+.transact-panel {
+  display: grid;
+  grid-template-rows: 20% 60% 10% 10%;
+  grid-template-columns: 1fr;
+}
+
 .balance-text {
   font-size: 25px;
-  margin: 0 0 35px 0;
 }
 
 .amount-text {
   font-size: 25px;
-  margin: 15px 0 15px 0;
+}
+
+.balance-info {
+  grid-column: 1 / 2;
 }
 
 .balance-value, .amount{
@@ -83,7 +92,6 @@
   color: black;
   appearance: none;
   text-align: center;
-  padding: 0 10px;
 
   outline: var(--highlight);
   border: 3px solid var(--highlight);
@@ -95,13 +103,13 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  gap: 20px;
+  gap: 15px;
 }
 
 .amount {
   height: max-content;
-
 }
+
 
 .balance-value {
   background-color: var(--highlight);
