--- a/src/parts/UserInfo.css
+++ b/src/parts/UserInfo.css
@@ -1,11 +1,10 @@
 .user-info-container {
-  height: 66%;
   background-color: var(--third);
   border-radius: 15px;
-  padding: 40px 40px 40px 40px;
-  margin: 25px 0;
+  margin: 25px 0 0 0;
   color: var(--white);
   font-size: 18px;
+  padding: 5% 5%;
 
   display: grid;
   grid-template-columns: auto 1fr;
@@ -15,10 +14,5 @@
 .field-value {
   color: var(--highlight);
   font-weight: 700;
-  padding: 10px 5px;
   border-bottom: 1px dashed var(--white);
-}
-
-.field-name {
-  padding: 10px 0 0 0;
 }
