--- a/src/routes/ErrorPage.css
+++ b/src/routes/ErrorPage.css
@@ -19,7 +19,15 @@
   place-content: center;
   text-align: center;
   align-items: center;
-  grid-template-rows: 70% 30%;
+  grid-template-rows: 50% 25% 25%;
+}
+
+.message-container h1 {
+  margin-top: 100px;
+}
+
+.message-container span {
+  margin-bottom: 70px;
 }
 
 .go-back {
