--- a/src/index.css
+++ b/src/index.css
@@ -81,6 +81,10 @@ i {
   visibility: hidden;
 }
 
+.dashboard-container .main {
+  width: 95%;
+  margin: auto;
+}
 .workspace {
   max-height: 85vh;
 }
@@ -101,6 +105,7 @@ input::-webkit-inner-spin-button {
 
 ::-webkit-scrollbar-thumb {
   background: #888;
+  border-radius: 25px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
