--- a/src/parts/Hero.css
+++ b/src/parts/Hero.css
@@ -6,6 +6,7 @@
   grid-template-columns: 65% 35%;
   grid-template-rows: repeat(5, 20%);
   border: 1px solid var(--white);
+  border-radius: 5px;
 }
 
 .hero .title, .hero .subtitle, .hero-text-block {
@@ -17,7 +18,6 @@
   font-size: 55px;
   font-weight: 700;
   color: var(--white);
-  margin: 0 0 0 4%;
 }
 
 .hero .subtitle {
