--- a/src/parts/LoginForm.css
+++ b/src/parts/LoginForm.css
@@ -26,8 +26,10 @@ label {
 
 .login-form-container input {
   font-family: var(--font-secondary);
-  color: var(--secondary);
+  color: var(--primary);
+  background-color: var(--white);
   padding-left: 5%;
+  border-radius: 5px;
 }
 
 .login-form-container .notif {
