--- a/src/parts/Hero.css
+++ b/src/parts/Hero.css
@@ -5,11 +5,29 @@
   display: grid;
   grid-template-columns: 65% 35%;
   grid-template-rows: repeat(5, 20%);
-  border: 1px solid var(--white);
+  border: 1px solid var(--highlight);
+  border-radius: 15px;
+  margin-top: 2%;
+}
+
+.title {
+  margin-top: 3%;
+}
+
+.subtitle {
+  display: block;
+  position: relative;
+  top: -20%;
+}
+
+.hero-text-block {
+  display: block;
+  position: relative;
+  top: -50%;
 }
 
 .hero .title, .hero .subtitle, .hero-text-block {
-  padding-left: 20px;
+  padding-left: 5%;
 }
 
 .hero .title {
@@ -17,7 +35,6 @@
   font-size: 55px;
   font-weight: 700;
   color: var(--white);
-  margin: 0 0 0 4%;
 }
 
 .hero .subtitle {
