--- a/src/parts/Sidebar.css
+++ b/src/parts/Sidebar.css
@@ -10,3 +10,9 @@
   grid-gap: 5px;
   border-radius: 16px;
 }
+
+.welcome {
+  border-bottom: 1px solid rgb(90, 90, 90);
+  height: 55%;
+  padding: 2% 0 0 4%;
+}
